Revise title and enhance layout styles
Updated the title and improved styling for header, sidebar, and news ticker.

--- a/index.html
+++ b/index.html
@@ -2,127 +2,145 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Algeriano NEO</title>
+  <title>Algeriano Neo</title>
   <style>
     body {
       margin: 0;
-      font-family: 'Tajawal', sans-serif;
-      background: linear-gradient(to bottom, #0d0d0d, #1a1a1a);
+      font-family: 'Poppins', sans-serif;
+      background: linear-gradient(135deg, #0f0f10, #1a1a1d 60%, #0d0d0e);
       color: #fff;
-    }/* الشريط العلوي */
-.top-bar {
+    }/* HEADER */
+.header {
   display: flex;
-  justify-content: space-between;
   align-items: center;
-  padding: 12px 20px;
-  background: #111;
-  border-bottom: 1px solid #333;
+  justify-content: space-between;
+  padding: 20px;
+  background: rgba(255,255,255,0.03);
+  backdrop-filter: blur(12px);
+  border-bottom: 1px solid rgba(255,255,255,0.07);
 }
 
 .logo {
-  font-size: 26px;
-  font-weight: 700;
-  color: #00ffbf;
-  letter-spacing: 1px;
+  font-size: 32px;
+  font-weight: 800;
+  letter-spacing: 2px;
+  background: linear-gradient(45deg, #6cc4ff, #ffffff);
+  -webkit-background-clip: text;
+  color: transparent;
 }
 
-/* شريط الأخبار */
-.news-container {
-  background: #0f0f0f;
-  padding: 10px;
+/* NEWS TICKER */
+.news-bar {
+  background: rgba(255,255,255,0.05);
+  padding: 12px;
   overflow: hidden;
-  border-bottom: 1px solid #222;
-}
-
-.news-track {
-  display: inline-block;
   white-space: nowrap;
-  animation: slide-left 18s linear infinite;
-  font-size: 17px;
-  color: #00ffaa;
+  border-top: 1px solid rgba(255,255,255,0.08);
+  border-bottom: 1px solid rgba(255,255,255,0.08);
 }
 
-@keyframes slide-left {
-  0% { transform: translateX(100%); }
-  100% { transform: translateX(-100%); }
+.news-text {
+  display: inline-block;
+  animation: ticker 18s linear infinite;
+  font-size: 18px;
+  opacity: 0.85;
 }
 
-/* القائمة الجانبية */
-.menu {
-  width: 250px;
-  background: #121212;
-  height: 100vh;
+@keyframes ticker {
+  0% { transform: translateX(-100%); }
+  100% { transform: translateX(100%); }
+}
+
+/* SIDEBAR */
+.sidebar {
   position: fixed;
   top: 0;
   right: -260px;
-  padding-top: 70px;
+  width: 260px;
+  height: 100%;
+  background: rgba(255,255,255,0.04);
+  backdrop-filter: blur(14px);
+  padding: 25px;
+  box-shadow: -4px 0 15px rgba(0,0,0,0.4);
   transition: 0.4s;
-  border-left: 2px solid #0ff;
 }
 
-.menu.open {
+.sidebar.open {
   right: 0;
 }
 
-.menu a {
-  display: block;
-  padding: 15px 20px;
-  font-size: 18px;
-  color: #eee;
-  border-bottom: 1px solid #1f1f1f;
-  transition: 0.2s;
-}
-
-.menu a:hover {
-  background: #00ffbf33;
-  color: #00ffbf;
-}
-
-/* زر القائمة */
-.menu-btn {
-  font-size: 26px;
+.menu-toggle {
+  font-size: 28px;
   cursor: pointer;
-  color: #00ffbf;
 }
 
-/* المحتوى */
-.content {
-  padding: 20px;
-  margin-top: 20px;
+.sidebar a {
+  display: block;
+  padding: 14px;
+  margin: 10px 0;
+  background: rgba(255,255,255,0.06);
+  text-decoration: none;
+  color: #fff;
+  border-radius: 10px;
+  transition: 0.3s;
+  font-size: 18px;
+}
+
+.sidebar a:hover {
+  background: #6cc4ff;
+  color: #000;
+  transform: translateX(-6px);
+}
+
+/* MAIN */
+.hero {
+  padding: 80px 25px;
   text-align: center;
 }
 
-h1 {
-  font-size: 32px;
-  color: #00ffbf;
+.hero h1 {
+  font-size: 42px;
+  font-weight: 900;
+  margin-bottom: 15px;
+  background: linear-gradient(45deg, #6cc4ff, #ffffff);
+  -webkit-background-clip: text;
+  color: transparent;
 }
 
-p {
-  font-size: 18px;
-  color: #ccc;
+.hero p {
+  font-size: 20px;
+  opacity: 0.8;
+  max-width: 500px;
+  margin: auto;
 }
 
   </style>
 </head>
-<body>  <!-- الشريط العلوي مع اللوغو والزر -->  <div class="top-bar">
-    <div class="menu-btn" onclick="toggleMenu()">☰</div>
-    <div class="logo">Algeriano NEO</div>
-  </div>  <!-- شريط الأخبار من اليسار إلى اليمين -->  <div class="news-container">
-    <div class="news-track">آخر الأخبار: إطلاق النسخة الأولى من Algeriano NEO — خدمات — تجارة بوسيط — نقل بالسائقين — ترفيه — المزيد قريباً! 🚀</div>
-  </div>  <!-- القائمة الجانبية -->  <div id="menu" class="menu">
+<body>
+  <div class="header">
+    <div class="logo">NEO DZ</div>
+    <div class="menu-toggle" onclick="toggleMenu()">☰</div>
+  </div>  <div class="news-bar">
+    <span class="news-text">🔥 آخر الأخبار — إطلاق منصة Algeriano Neo في نسختها 2026 — خدمات تجارة، صحة، ترفيه، نقل، مطاعم، تقنية والمزيد...</span>
+  </div>  <div class="sidebar" id="sidebar">
     <a href="#">الرئيسية</a>
     <a href="#">التجارة بوسيط</a>
     <a href="#">الخدمات</a>
     <a href="#">الترفيه</a>
-    <a href="#">النقل بالسائقين</a>
+    <a href="#">السائقين</a>
     <a href="#">الصحة</a>
     <a href="#">قسم المرأة</a>
     <a href="#">المطاعم والتغذية</a>
     <a href="#">العقار</a>
-    <a href="#">التقنية والدروس</a>
+    <a href="#">الدروس والتقنية</a>
     <a href="#">السفر والسياحة</a>
     <a href="#">المتجر العام</a>
-  </div>  <!-- المحتوى -->  <div class="content">
-    <h1>مرحباً بك في Algeriano NEO</h1>
-    <p>منصة تجمع كل خدمات الجزائر في مكان واحد — المستقبل يبدأ من هنا.</p>
-  </div>  <script>
+  </div>  <section class="hero">
+    <h1>مرحبا بك في مستقبل المنصات</h1>
+    <p>النسخة الأكثر فخامة، عصرية، وقوة لعام 2026 — مصممة للشباب، وسهلة، وسريعة، وبأفضل تجربة مستخدم.</p>
+  </section>  <script>
+    function toggleMenu() {
+      document.getElementById('sidebar').classList.toggle('open');
+    }
+  </script></body>
+</html>
