Revise index.html for layout and styling changes
Updated the HTML structure and styles for the homepage.

--- a/index.html
+++ b/index.html
@@ -1,143 +1,186 @@
-<!-- Ultra Premium 2026 Homepage --><!DOCTYPE html><html lang="ar" dir="rtl">
+<!DOCTYPE html>
+<html lang="ar" dir="rtl">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Algeriano_Neo</title>
-  <style>
-    body {
-      margin: 0;
-      font-family: 'Cairo', sans-serif;
-      background: #0d0d0d;
-      color: #fff;
-      overflow-x: hidden;
-    }/* HEADER */
-header {
-  background: rgba(20,20,20,0.85);
-  backdrop-filter: blur(12px);
-  padding: 25px 0;
-  text-align: center;
-  font-size: 40px;
-  font-weight: bold;
-  letter-spacing: 3px;
-  color: #00eaff;
-  text-shadow: 0 0 15px #00eaff;
+<meta charset="UTF-8">
+<title>Algeriano_Neo</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+body {
+    margin: 0;
+    background: #020202;
+    font-family: 'Poppins', sans-serif;
+    overflow-x: hidden;
 }
 
-/* NEWS TICKER */
+/* ===== هولوغرام 3D ===== */
+
+#hero {
+    height: 380px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    perspective: 1200px;
+    position: relative;
+    overflow: hidden;
+}
+
+.holo {
+    width: 260px;
+    height: 260px;
+    background: rgba(0, 255, 255, 0.08);
+    border: 1px solid rgba(0, 255, 255, 0.4);
+    backdrop-filter: blur(8px);
+    border-radius: 20px;
+    box-shadow: 0 0 30px #00eaff, inset 0 0 20px #0099cc;
+    transform-style: preserve-3d;
+    transition: 0.2s;
+    position: relative;
+}
+
+/* خريطة الجزائر داخل الهولوغرام */
+
+.algeria {
+    width: 160px;
+    position: absolute;
+    top: 20px;
+    left: 50%;
+    transform: translateX(-50%);
+    filter: drop-shadow(0 0 18px #00eaff);
+    opacity: 0.9;
+}
+
+/* نص 3D */
+
+.logo {
+    position: absolute;
+    bottom: 25px;
+    width: 100%;
+    text-align: center;
+    font-size: 26px;
+    color: #00eaff;
+    font-weight: 800;
+    text-shadow: 0 0 12px #00eaff, 0 0 25px #0099cc;
+}
+
+/* تأثير ضوئي يخرج من الخلف */
+
+#hero::before {
+    content: "";
+    position: absolute;
+    width: 500px;
+    height: 500px;
+    background: radial-gradient(circle, rgba(0,255,255,0.25), transparent 70%);
+    top: -150px;
+    left: 50%;
+    transform: translateX(-50%);
+    filter: blur(40px);
+}
+
+/* ===== شريط الأخبار ===== */
+
 .ticker {
-  margin-top: 10px;
-  width: 100%;
-  background: #101820;
-  padding: 12px 0;
-  overflow: hidden;
-  border-top: 1px solid #00eaff55;
-  border-bottom: 1px solid #00eaff55;
+    background: #0a0a0a;
+    border-top: 1px solid #00eaff;
+    border-bottom: 1px solid #00eaff;
+    color: white;
+    padding: 10px;
+    overflow: hidden;
+    position: relative;
 }
 
-.ticker-content {
-  display: inline-block;
-  white-space: nowrap;
-  animation: tickerMove 18s linear infinite;
-  font-size: 18px;
-  color: #00eaff;
+.ticker span {
+    position: absolute;
+    white-space: nowrap;
+    animation: scroll 14s linear infinite;
+    font-size: 16px;
+    color: #00eaff;
 }
 
-@keyframes tickerMove {
-  from { transform: translateX(100%); }
-  to { transform: translateX(-100%); }
+@keyframes scroll {
+    from { right: -100%; }
+    to { right: 100%; }
 }
 
-/* MENU */
-.menu-btn {
-  position: fixed;
-  top: 20px;
-  left: 20px;
-  width: 45px;
-  height: 45px;
-  background: #00eaff;
-  border-radius: 12px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-size: 28px;
-  cursor: pointer;
-  box-shadow: 0 0 15px #00eaff;
-  z-index: 999;
+/* ===== القائمة العمودية ===== */
+
+.menu {
+    position: fixed;
+    top: 20px;
+    left: 20px;
+    background: rgba(10,10,10,0.75);
+    border: 1px solid #00eaff;
+    padding: 15px;
+    border-radius: 15px;
+    width: 170px;
+    box-shadow: 0 0 25px #00eaff;
 }
 
-nav {
-  position: fixed;
-  top: 0;
-  left: -270px;
-  width: 250px;
-  height: 100vh;
-  background: #0f1a20;
-  padding-top: 80px;
-  transition: 0.4s ease;
-  box-shadow: 4px 0 20px #000;
-  z-index: 998;
+.menu h3 {
+    margin: 0 0 10px;
+    color: #00eaff;
+    text-align: center;
+    font-size: 18px;
 }
 
-nav.open {
-  left: 0;
+.menu a {
+    text-decoration: none;
+    color: white;
+    display: block;
+    padding: 8px 0;
+    transition: 0.3s;
 }
 
-nav a {
-  display: block;
-  padding: 18px;
-  font-size: 20px;
-  color: #cce7ff;
-  text-decoration: none;
-  border-bottom: 1px solid #1e2c33;
-  transition: 0.25s;
+.menu a:hover {
+    padding-left: 10px;
+    color: #00eaff;
 }
 
-nav a:hover {
-  background: #00eaff22;
-  color: #00eaff;
-  padding-right: 28px;
-}
-
-/* MAIN SECTION */
-.hero {
-  margin-top: 80px;
-  text-align: center;
-  padding: 60px 20px;
-}
-
-.hero h1 {
-  font-size: 48px;
-  color: #00eaff;
-  text-shadow: 0 0 20px #00eaffaa;
-}
-
-.hero p {
-  font-size: 22px;
-  opacity: 0.8;
-}
-
-  </style>
+</style>
 </head>
-<body>  <header>Algeriano_Neo</header>  <div class="ticker">
-    <div class="ticker-content">🔥 مرحباً بكم في أقوى منصة جزائرية — تجارة • ترفيه • خدمات • صحة • سائقين • نساء • مطاعم 🔥</div>
-  </div>  <div class="menu-btn" onclick="toggleMenu()">☰</div>  <nav id="sideMenu">
+
+<body>
+
+<!-- ====== 3D HOLOGRAM HEADER ====== -->
+<div id="hero">
+    <div class="holo" id="holoBox">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/7/77/Flag-map_of_Algeria.svg" class="algeria">
+
+        <div class="logo">Algeriano_Neo</div>
+    </div>
+</div>
+
+<!-- ===== شريط الاخبار ===== -->
+<div class="ticker">
+    <span>🔥 مرحباً بكم في Algeriano_Neo — أول منصة جزائرية 3D تجمع التجارة والخدمات والصحة والترفيه والسائقين والنساء 🔥</span>
+</div>
+
+<!-- ===== القائمة العمودية ===== -->
+<div class="menu">
+    <h3>الأقسام</h3>
+    <a href="#">الرئيسية</a>
     <a href="#">التجارة بوسيط</a>
-    <a href="#">الترفيه</a>
     <a href="#">الخدمات</a>
-    <a href="#">قسم السائقين</a>
-    <a href="#">قسم الصحة</a>
+    <a href="#">الترفيه</a>
+    <a href="#">السائقين</a>
+    <a href="#">الصحة</a>
     <a href="#">قسم المرأة</a>
-    <a href="#">المطاعم و التغذية</a>
+    <a href="#">المطاعم</a>
     <a href="#">العقار</a>
-    <a href="#">التقنية و الدروس</a>
-    <a href="#">السفر و السياحة</a>
+    <a href="#">التقنية</a>
+    <a href="#">السفر</a>
     <a href="#">المتجر العام</a>
-  </nav>  <section class="hero">
-    <h1>مرحباً بك في المستقبل</h1>
-    <p>تجربة جزائرية 100%… بجودة عالمية و ستايل 2026 ✨</p>
-  </section>  <script>
-    function toggleMenu() {
-      document.getElementById('sideMenu').classList.toggle('open');
-    }
-  </script></body>
+</div>
+
+<script>
+// حركة 3D مع الماوس
+const holo = document.getElementById("holoBox");
+
+document.addEventListener("mousemove", (e) => {
+    let x = (window.innerWidth / 2 - e.pageX) / 40;
+    let y = (window.innerHeight / 2 - e.pageY) / 40;
+    holo.style.transform = `rotateY(${x}deg) rotateX(${y}deg)`;
+});
+</script>
+
+</body>
 </html>
